--- a/stylus/pages/homepage/banner.styl
+++ b/stylus/pages/homepage/banner.styl
@@ -2,7 +2,7 @@
     min-height: 80vh;
     position: relative;
     z-index: 9;
-    background: url(../images/banner.jpg) no-repeat;
+    background: #222 url(../images/banner.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     color: $color_white;
