--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -519,7 +519,7 @@ a[href^="mailto"]:before {
   min-height: 80vh;
   position: relative;
   z-index: 9;
-  background: url("../images/banner.jpg") no-repeat;
+  background: #222 url("../images/banner.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   color: #fff;
