--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
   background-color: #f9f9f9;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Open Sans, Helvetica Neue, Helvetica, sans-serif;
   font-size: 14px;
   line-height: 1.4;
   -ms-text-size-adjust: 100%;
@@ -453,7 +453,7 @@ a[href^="mailto"]:before {
   padding: 6px 12px;
 }
 .me-menu__inner ul a:hover {
-  background-color: rgba(0,0,0,0.12);
+  background-color: #fde706;
 }
 .me-menu__inner:hover ul {
   display: inline-block;
