--- a/stylus/helpers/variables.styl
+++ b/stylus/helpers/variables.styl
@@ -25,7 +25,7 @@ $link_hover_color                 = darken($link_color, 5%)    //blue
 //------------------------------------------------------------------------------
 //  font-family
 //------------------------------------------------------------------------------
-$font_family_sans_serif           = -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif
+$font_family_sans_serif           = -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Open Sans, Helvetica Neue, Helvetica, sans-serif
 $font_family_serif                = Georgia, Cambria, Times New Roman, Times, serif
 $font_family_monospace            = Menlo, Monaco, Consolas, Courier New, monospace
 
