--- a/stylus/layout/menu.styl
+++ b/stylus/layout/menu.styl
@@ -46,7 +46,7 @@
 					padding: 6px 12px;
 					
 					&:hover{
-						background-color: rgba(0, 0, 0, 0.12);
+						background-color: #fde706;
 					}
 				}
 			}
