--- a/stylus/layout/common.styl
+++ b/stylus/layout/common.styl
@@ -13,7 +13,7 @@ a[href^="mailto"]{
 	&:before{
 		content: "";
 		box(12px);
-		background: url(../images/phone.svg) no-repeat center;
+		background: url(../images/icon/phone-white.svg) no-repeat center;
 		background-size: contain;					
 		display: inline-block;
 		vertical-align: middle;
@@ -22,6 +22,6 @@ a[href^="mailto"]{
 }
 a[href^="mailto"]{
 	&:before{
-		background: url(../images/mail.svg) no-repeat center;
+		background: url(../images/icon/mail-white.svg) no-repeat center;
 	}
 }
