--- a/stylus/layout/footer.styl
+++ b/stylus/layout/footer.styl
@@ -4,7 +4,7 @@
 	position: relative;
 	background-color: $color_black;
 	color: $color_white;
-	background-image: url(../images/section-footer.jpg);
+	background-image: url(../images/wide/section-footer.jpg);
 	background-repeat: no-repeat;
 	background-position: center bottom;	
 	background-size: cover;
@@ -42,7 +42,7 @@
     		position: absolute;
     		left: -24px;
     		box(18px);
-    		background: url(../images/map.svg) no-repeat center;
+    		background: url(../images/icon/map-white.svg) no-repeat center;
     		background-size: contain;
     	}
     }
