--- a/stylus/layout/header.styl
+++ b/stylus/layout/header.styl
@@ -5,7 +5,7 @@
 	left: 0;
 	right: 0;
 	z-index: 99;
-	color: rgba($color_white, .75);
+	color: rgba($color_white, .85);
 	transition: .25s ease;
 
 	+mq(gt-lg){
@@ -32,7 +32,7 @@
 		}
 		&logo{
 			box(150px, 42px);
-			background: url(../images/mechetronz.svg) no-repeat;
+			background: url(../images/brand/mechetronz-white.svg) no-repeat;
 			background-size: contain;
 			overflow: hidden;
 			text-indent: 100%;
