--- a/stylus/pages/homepage/banner.styl
+++ b/stylus/pages/homepage/banner.styl
@@ -2,7 +2,7 @@
     min-height: 80vh;
     position: relative;
     z-index: 9;
-    background: #222 url(../images/banner.jpg) no-repeat;
+    background: #fdb302 url(../images/wide/banner.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     color: $color_white;
@@ -17,8 +17,8 @@
         right: 0;
         left: 0;
         z-index: @z-index + 1;
-        background-color: rgba(0, 0, 0, .5);
-        display: block;
+        background-color: rgba(#fdb302, .5);
+        display: block;            
     }
 
     &__{
