--- a/stylus/layout/_layout.styl
+++ b/stylus/layout/_layout.styl
@@ -8,7 +8,7 @@ $section = "section"
 
 //header
 $header	= "header"
-$menu	= "menu"
+$nav	= "nav"
 
 //footer
 $footer	= "footer"
@@ -32,6 +32,6 @@ $container-padding = 24px
 
 @import "header"
 
-@import "menu"
+@import "nav"
 
 @import "footer"
