--- a/stylus/layout/header.styl
+++ b/stylus/layout/header.styl
@@ -5,7 +5,7 @@
 	left: 0;
 	right: 0;
 	z-index: 99;
-	color: rgba($color_white, .85);
+	color: $color_white;
 	transition: .25s ease;
 
 	+mq(gt-lg){
