--- a/stylus/layout/nav.styl
+++ b/stylus/layout/nav.styl
@@ -1,6 +1,6 @@
-.me-{$menu}{
+.me-{$nav}{
 	display: inline-block;
-	vertical-align: middle;
+	vertical-align: middle;	
 
 	>li{
 		display: inline-block;
