--- a/stylus/layout/nav.styl
+++ b/stylus/layout/nav.styl
@@ -8,6 +8,8 @@
 
 		>a{
 			padding: 6px 15px;						
+			display: inline-block;
+			text-shadow: 1px 1px 2px rgba(0,0,0,.1);
 			
 			&:hover{
 				color: $color_white;
@@ -30,9 +32,9 @@
 
 			& ul{
 				display: none;
-				position: absolute;
-				left: 15px;
-			    top: 24px;
+				position: absolute;				
+			    top: 100%;
+			    right: 3px;
 			    z-index: 111;
 				padding: 3px 0;
 			    background: #fff;
