--- a/stylus/pages/homepage/banner.styl
+++ b/stylus/pages/homepage/banner.styl
@@ -1,12 +1,12 @@
 .me-{$banner}{
-    min-height: 80vh;
+    min-height: 600px;
     position: relative;
     z-index: 9;
     background: #fdb302 url(../images/wide/banner.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     color: $color_white;
-    font-weight: 200;
+    font-weight: 300;
     clearfix();
 
     &:before{
@@ -18,37 +18,48 @@
         left: 0;
         z-index: @z-index + 1;
         background-color: rgba(#fdb302, .5);
-        display: block;            
+        display: block;
     }
 
     &__{
-        &title{
-            font-size: 60px;
-            line-height: @font-size + 12;            
-            margin-bottom: 60px;
-            text-transform: uppercase;
-            font-weight: 600;
-            letter-spacing: 12px;           
-        }
-        &quote{
-            font-size: $font_size_lg;
-            line-height: @font-size + 6;
-            letter-spacing: 3px;
-            
-            &:before{
-                content:'';
-                display: block;
-                margin: 0 auto 30px;
-                box(60px, 2px);
-                background-color: $color_white;
-            }
-        }
         &content{
             padding: 240px 0 150px;
             position: relative;
             z-index: @z-index + 2;
             min-height: 500px;
-            text-align: center;
+            text-shadow: 1px 1px 2px rgba(0,0,0,.1);
+        }
+        &title{
+            font-size: 60px;
+            line-height: @font-size + 12;
+            margin-bottom: 30px!important;
+            text-transform: uppercase;
+            font-weight: 600;
+            letter-spacing: 12px;
+        }
+        &quote{
+            font-size: $font_size_lg;
+            line-height: @font-size + 6;
+            letter-spacing: 3px;
+            font-weight: 300;
+            position: relative;
+
+            &:before{
+                content:'';
+                display: block;
+                position: absolute;
+                right: 100%;
+                top: 18px;
+                margin-right: 9px;
+                box(30px, 2px);
+                border-radius: 2px;
+                background-color: currentColor;
+            }
+        }
+        &launch{
+            font-size: 18px;
+            margin-top: 21px;
+            display: inline-block;
         }
     }
     a{
