--- a/stylus/helpers/variables.styl
+++ b/stylus/helpers/variables.styl
@@ -8,13 +8,13 @@ $alpha_3                          = .36
 //------------------------------------------------------------------------------
 //  color
 //------------------------------------------------------------------------------
-$color_black                      = #222222    //black
+$color_base                      = #222222    //black
 $color_white                      = #ffffff    //white
 $color_primary                    = #2d8e7e    //green
 $color_accent                     = #333333    //black
 $color_warn                       = #f7a400    //yellow
 $color_muted                      = #969696    //gray
-$color_brand                      = #800000    //red
+$color_brand                      = #fdb302    //yellow
 
 //------------------------------------------------------------------------------
 //  hyperlink
@@ -56,7 +56,7 @@ $font_size_h6                     = $font_size_xs
 $font_family_base                 = $font_family_sans_serif
 $font_size_base                   = $font_size_st
 $line_height_base                 = 1.4
-$text_color_base                  = $color_black
+$text_color_base                  = $color_base
 
 //------------------------------------------------------------------------------
 //  form fields
@@ -66,7 +66,7 @@ $form_label_color                 = $color_muted
 $form_label_font_size             = $font_size_st
 
 //control
-$form_control_color               = $color_black
+$form_control_color               = $color_base
 $form_control_border              = #161d20
 $form_control_bg                  = $color_white
 $form_control_font_size           = $font_size_st
@@ -90,7 +90,7 @@ $form_help_color                  = $color_muted
 //  button
 //------------------------------------------------------------------------------
 //text color
-$btn_color_black                  = $color_black
+$btn_color_black                  = $color_base
 $btn_color_white                  = $color_white
 $btn_color_primary                = $color_primary
 $btn_color_accent                 = $color_accent
@@ -99,7 +99,7 @@ $btn_color_warn                   = $color_warn
 $btn_color_muted                  = $color_muted
 
 //background color
-$btn_bg_black                     = $color_black
+$btn_bg_black                     = $color_base
 $btn_bg_white                     = $color_white
 $btn_bg_primary                   = $color_primary
 $btn_bg_accent                    = $color_accent
@@ -115,7 +115,7 @@ $btn_font_size_lg                 = 16px
 $btn_height                       = 42px
 
 //shadow
-$btn_shadow_dp1                   = 0 2px 2px rgba($color_black, .12)
+$btn_shadow_dp1                   = 0 2px 2px rgba($color_base, .12)
 
 //------------------------------------------------------------------------------
 //  border
