--- a/stylus/layout/container.styl
+++ b/stylus/layout/container.styl
@@ -30,7 +30,7 @@
 			z-index: 18;
 		}
 		&img{
-			background-color: $color_black;
+			background-color: $color_base;
 			color: $color_white;
 			background-repeat: no-repeat;
 			background-position: center;
