--- a/stylus/layout/footer.styl
+++ b/stylus/layout/footer.styl
@@ -2,7 +2,7 @@
 	padding: 150px 0;
 	font-size: $font_size_sm;
 	position: relative;
-	background-color: $color_black;
+	background-color: $color_base;
 	color: $color_white;
 	background-image: url(../images/wide/section-footer.jpg);
 	background-repeat: no-repeat;
