--- a/stylus/layout/nav.styl
+++ b/stylus/layout/nav.styl
@@ -38,7 +38,7 @@
 			    z-index: 111;
 				padding: 3px 0;
 			    background: #fff;
-			    color: $color_black;
+			    color: $color_base;
 			    min-width: 120px;
 			    border-radius: 2px;
 			    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.12);
