--- a/stylus/pages/homepage/product.styl
+++ b/stylus/pages/homepage/product.styl
@@ -44,7 +44,7 @@
 		}
 		&img{
 			flex: 1;
-			background-color: $color_black;
+			background-color: $color_base;
 			background-repeat: no-repeat;
 			background-position: center;
 			background-size: cover;
@@ -92,7 +92,7 @@
 		&value{
 			background-color: $color_white;
 			z-index: 4;
-			color: $color_black;
+			color: $color_base;
 			padding-left: 12px;
 		}
 	}
