--- a/stylus/pages/homepage/banner.styl
+++ b/stylus/pages/homepage/banner.styl
@@ -2,7 +2,7 @@
     min-height: 600px;
     position: relative;
     z-index: 9;
-    background: #fdb302 url(../images/wide/banner.jpg) no-repeat;
+    background: $color_brand url(../images/wide/banner.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     color: $color_white;
@@ -17,7 +17,7 @@
         right: 0;
         left: 0;
         z-index: @z-index + 1;
-        background-color: rgba(#fdb302, .6);
+        background-color: rgba($color_brand, .6);
         display: block;
     }
 
@@ -30,12 +30,10 @@
             text-shadow: 1px 1px 2px rgba(0,0,0,.1);
         }
         &title{
-            font-size: 60px;
+            font-size: 72px;
             line-height: @font-size + 12;
             margin-bottom: 30px!important;
-            text-transform: uppercase;
-            font-weight: 600;
-            letter-spacing: 12px;
+            font-weight: 600;            
         }
         &quote{
             font-size: $font_size_lg;
