--- a/stylus/base/normalize.styl
+++ b/stylus/base/normalize.styl
@@ -17,9 +17,9 @@ html{
 }
 
 body {
-    font-family: $font_family_base;
-    font-size: $font_size_base;
-    line-height: $line_height_base;
+    font-family: $base_family;
+    font-size: $base_size;
+    line-height: $base_line_height;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
 }
