--- a/stylus/layout/container.styl
+++ b/stylus/layout/container.styl
@@ -16,7 +16,7 @@
 			text-transform: uppercase;
 			margin-bottom: 60px;
 			text-align: center;
-			font-size: $font_size_md;
+			font-size: $size_md;
 			letter-spacing: 6px;
 		}
 	}
@@ -47,12 +47,12 @@
 		        right: 0;
 		        left: 0;
 		        z-index: 19;
-		        background-color: rgba(0, 0, 0, .5);
+		        background-color: rgba($color_black, .5);
 		        display: block;
 		    }
 		    
 		    .me-{$section}__title{
-		    	font-size: $font_size_lg;
+		    	font-size: $size_lg;
 		    	margin-top: 20vh;		    	
 		    }
 		}
