--- a/stylus/layout/footer.styl
+++ b/stylus/layout/footer.styl
@@ -1,6 +1,6 @@
 .me-{$footer}{
 	padding: 150px 0;
-	font-size: $font_size_sm;
+	font-size: $size_sm;
 	position: relative;
 	background-color: $color_base;
 	color: $color_white;
@@ -18,7 +18,7 @@
         right: 0;
         left: 0;
         z-index: 19;
-        background-color: rgba(0, 0, 0, .5);
+        background-color: rgba($color_black, .5);
         display: block;
     }
     & a{
@@ -34,7 +34,7 @@
     }
     & address{
     	position: relative;
-        line-height: 24px;   
+        line-height: 1.8;
     	
     	&:before{
     		content: "";
