--- a/stylus/layout/header.styl
+++ b/stylus/layout/header.styl
@@ -16,7 +16,7 @@
 			position: fixed;
 			padding-top: 12px;
 			padding-bottom: @padding-top;
-			background-color: rgba(0, 0, 0, 0.75);
+			background-color: rgba($color_black, 0.75);
 		}
 	}
 	a{
@@ -24,7 +24,7 @@
 	}
 	&__{
 		&brand{
-			font-size: $font_size_md;
+			font-size: $size_md;
 			display: inline-block;
 			vertical-align: middle;
 			margin-right: 45px;
