--- a/stylus/test/demo.styl
+++ b/stylus/test/demo.styl
@@ -234,12 +234,12 @@ for value in colors
     background: value[1]
     color: value[2]
 
-$headings = 'h1' $font_size_h1 500 12px,
-            'h2' $font_size_h2 500 12px,
-            'h3' $font_size_h3 300 12px,
-            'h4' $font_size_h4 300 9px,
-            'h5' $font_size_h5 400 6px,
-            'h6' $font_size_h6 400 6px
+$headings = 'h1' $size_h1 500 12px,
+            'h2' $size_h2 500 12px,
+            'h3' $size_h3 300 12px,
+            'h4' $size_h4 300 9px,
+            'h5' $size_h5 400 6px,
+            'h6' $size_h6 400 6px
 
 
 for $value in $headings {
