--- a/stylus/layout/nav.styl
+++ b/stylus/layout/nav.styl
@@ -9,7 +9,7 @@
 		>a{
 			padding: 6px 15px;						
 			display: inline-block;
-			text-shadow: 1px 1px 2px rgba(0,0,0,.1);
+			text-shadow: 1px 1px 2px rgba($color_black,.1);
 			
 			&:hover{
 				color: $color_white;
@@ -41,7 +41,7 @@
 			    color: $color_base;
 			    min-width: 120px;
 			    border-radius: 2px;
-			    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.12);
+			    box-shadow: 0 2px 2px 2px rgba($color_black, 0.12);
 
 				& a{
 					display: block;
