--- a/stylus/pages/homepage/banner.styl
+++ b/stylus/pages/homepage/banner.styl
@@ -6,7 +6,7 @@
     background-size: cover;
     background-position: center;
     color: $color_white;
-    font-weight: 300;
+    font-weight: $weight_light;
     clearfix();
 
     &:before{
@@ -27,19 +27,17 @@
             position: relative;
             z-index: @z-index + 2;
             min-height: 500px;
-            text-shadow: 1px 1px 2px rgba(0,0,0,.1);
+            text-shadow: 1px 1px 2px rgba($color_black,.1);
         }
         &title{
-            font-size: 72px;
-            line-height: @font-size + 12;
-            margin-bottom: 30px!important;
-            font-weight: 600;            
+            font-size: 72px;            
+            // margin-bottom: 30px!important;
+            font-weight: $weight_bold;            
         }
         &quote{
-            font-size: $font_size_lg;
-            line-height: @font-size + 6;
-            letter-spacing: 3px;
-            font-weight: 300;
+            font-size: $size_lg;        
+            letter-spacing: 2px;
+            font-weight: $weight_light;
             position: relative;
 
             &:before{
@@ -47,7 +45,7 @@
                 display: block;
                 position: absolute;
                 right: 100%;
-                top: 18px;
+                top: 21px;
                 margin-right: 9px;
                 box(30px, 2px);
                 border-radius: 2px;
