header affix js

--- a/stylus/layout/header.styl
+++ b/stylus/layout/header.styl
@@ -16,7 +16,7 @@
 			position: fixed;
 			padding-top: 12px;
 			padding-bottom: @padding-top;
-			background-color: rgba($color_black, 0.75);
+			background-color: $color_brand;
 		}
 	}
 	a{
