--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@ a[href^="mailto"]:before {
     position: fixed;
     padding-top: 12px;
     padding-bottom: 12px;
-    background-color: rgba(0,0,0,0.75);
+    background-color: #fdb302;
   }
 }
 .me-header a {
