--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -589,6 +589,11 @@ a[href^="mailto"]:before {
   font-size: 14px;
   font-weight: 600;
 }
+.me-product__title > span {
+  font-weight: 500;
+  font-size: 12px;
+  color: #999;
+}
 .me-product__img {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -647,4 +652,5 @@ a[href^="mailto"]:before {
   z-index: 4;
   color: #222;
   padding-left: 12px;
+  font-family: Menlo, Monaco, Consolas, Courier New, monospace;
 }
