--- a/stylus/pages/homepage/product.styl
+++ b/stylus/pages/homepage/product.styl
@@ -41,6 +41,12 @@
 			text-transform: uppercase;
 			font-size: $size_st;
 			font-weight: $weight_bold;
+			
+			> span{
+				font-weight: $weight_normal;
+				font-size: $size_sm;
+				color: $color_muted;
+			}
 		}
 		&img{
 			flex: 1;
@@ -94,6 +100,7 @@
 			z-index: 4;
 			color: $color_base;
 			padding-left: 12px;
+			font-family: $family_monospace;
 		}
 	}
 }
