--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,7 @@ a[href^="mailto"]:before {
     padding-top: 12px;
     padding-bottom: 12px;
     background-color: #fdb302;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.1);
   }
 }
 .me-header a {
