--- a/stylus/layout/header.styl
+++ b/stylus/layout/header.styl
@@ -17,6 +17,7 @@
 			padding-top: 12px;
 			padding-bottom: @padding-top;
 			background-color: $color_brand;
+			box-shadow: 0 1px 3px rgba($color_black, .1);
 		}
 	}
 	a{
